# PLAG

./: .gitignore  .gitignore.swp  README.md  _application_2build_2debug_2_m_a_s_s_2moc_2moc__predefs_8h_source.html  _application_2build_2release_2_m_a_s_s_2moc_2moc__predefs_8h_source.html  _application_2moc__predefs_8h_source.html  _c_o_m_port_data_source_2moc_2moc__predefs_8h_source.html  _data_base_source_2moc_2moc__predefs_8h_source.html  _day_plan_model_2moc_2moc__predefs_8h_source.html  _day_plan_view_2designproxymodel_8h_source.html  _day_plan_view_2moc_2moc__predefs_8h_source.html  _day_plan_view_2mytreeview_8h_source.html  _day_plan_view_2ui_2ui__form_8h_source.html  _experiment_control_model_2moc_2moc__predefs_8h_source.html  _experiment_control_view_2moc_2moc__predefs_8h_source.html  _experiment_control_view_2ui_2ui__form_8h_source.html  _extendable_data_manager_plugin_2moc_2moc__predefs_8h_source.html  _fuzzy_logic_model_2moc_2moc__predefs_8h_source.html  _grid_main_menu_view_2moc_2moc__predefs_8h_source.html  _grid_main_menu_view_2ui_2ui__form_8h_source.html  _heart_rate_device_model_2moc_2moc__predefs_8h_source.html  _heart_rate_device_view_2moc_2moc__predefs_8h_source.html  _heart_rate_device_view_2ui_2ui__form_8h_source.html  _interfaces_2iextendabledatamanager_8h_source.html  _main_menu_view_2mainform_8h_source.html  _main_menu_view_2moc_2moc__predefs_8h_source.html  _main_menu_view_2ui_2ui__form_8h_source.html  _modbus_data_reader_view_2ui_2ui__form_8h_source.html  _modbus_device_data_manager_2moc_2moc__predefs_8h_source.html  _my_cool_module_2moc_2moc__predefs_8h_source.html  _neural_network_model_2moc_2moc__predefs_8h_source.html  _notification_manager_model_2moc_2moc__predefs_8h_source.html  _old_plugins_2_data_managers_2_extendable_data_manager_2extendabledamanager_8h_source.html  (+2523 more)
(+4610 files in other folders)
